# WPlusPlusWASM

./: .gitignore  Cargo.toml  README.md  WPlusPlusVM.sln  hello.wasm  index.html  index.js  out.box.json  ui.wpp
ingot-cli/: Cargo.toml
ingot-cli/demo_project/: index.html  main.wpp  ui.wasm  ui.wpp.map.json  wpp.json  wpp_loader.js
ingot-cli/src/: main.rs
ingot-cli/templates/: index.html  wpp.json  wpp_loader.js
parser/: EntityDefinition.cs  Lexer.cs  Parser.cs  Program.cs
parser/AST/: AST.cs  AsyncLambdaNode.cs  AwaitNode.cs  BlockNode.cs  ForNode.cs  GroupNode.cs  IfElseNode.cs  ImportNode.cs  NoOpNode.cs  NodeJsonConverter.cs  PrintNode.cs  ReturnNode.cs  StringNode.cs  TypeOfNode.cs  VariableDeclarationNode.cs  WhileNode .cs
src/: main.rs  parser.rs  transpile.rs
wpp-wasm-runtime/: Cargo.toml  index.html  package-lock.json  runtime.js  ui.wasm  ui.wat  ui.wpp  ui.wpp.map.json
wpp-wasm-runtime/src/: gc.rs  main.rs  map.rs  memory.rs  parser.rs  transpile.rs
wpp_gc_runtime/: Cargo.toml
wpp_gc_runtime/src/: lib.rs
